# AnotoPdfGenerator

./: .gitignore  Cargo.toml  README.md
output/: GUI_G__81__56__10__10__X.json
rs_microdots/: README.md
rs_microdots/output/: G__55__55__10__2.json  G__55__55__10__2.txt  G__70__50__10__2.json  G__70__50__10__2.txt  G__80__50__10__2.json  G__80__50__10__2.txt  G__85__60__10__2.json  G__85__60__10__2.txt
src/: lib.rs  main.rs
src/anoto_matrix/: dotmatrix.rs  mod.rs
src/codec/: mod.rs
src/controls/: anoto_control.rs  mod.rs  page_layout_control.rs  section_control.rs
src/decode_utils/: find_pos.rs  mod.rs
src/make_plots/: mod.rs  plotting.rs
src/pdf_dotpaper/: gen_pdf.rs  mod.rs
src/persist_json/: mod.rs  persist.rs
